feat(shop): Rebalance equipment slot costs and UI
Adjusts the cost for unlocking additional equipment slots from fixed values to a tiered system, and updates the UI to reflect these new costs. This change makes higher slots more expensive, promoting strategic gem spending.

--- a/index.html
+++ b/index.html
@@ -533,8 +533,12 @@
         font-weight: bold;
         display: flex;
         align-items: center;
-        gap: 4px;
+        justify-content: space-between;
         margin-bottom: 4px;
+    }
+    .ball-select-btn .tooltip-icons-container {
+        display: flex;
+        gap: 2px;
     }
     .ball-select-btn .tooltip-equip-icon {
         font-size: 14px;
