--- a/index.html
+++ b/index.html
@@ -712,7 +712,6 @@
         color: #f39c12; /* Orange for debug */
     }
 
-
     .top-right-hud {
         position: absolute;
         top: 25px;
@@ -783,6 +782,28 @@
         flex-direction: column;
         gap: 5px;
         align-items: flex-end;
+    }
+
+    #cheat-buttons-container .debug-toggle-group {
+        pointer-events: all;
+        margin-bottom: 10px;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+    }
+
+    #cheat-buttons-container .debug-toggle-group label {
+        display: flex;
+        align-items: center;
+        gap: 6px;
+        cursor: pointer;
+        font-size: 12px;
+        color: #f39c12;
+    }
+
+    #cheat-buttons-container .debug-toggle-group input[type="checkbox"] {
+        transform: scale(1.5);
+        margin-right: 5px;
     }
 
     .cheat-btn {
@@ -1301,6 +1322,7 @@
                 <div>Coins: <span id="debug-coin-stat">0 / 0</span></div>
                 <div id="debug-equipment-stat"></div>
                 <div id="debug-ball-info"></div>
+                <div id="debug-event-log"></div>
             </div>
         </div>
         <div class="top-right-hud">
@@ -1313,6 +1335,10 @@
         </div>
         <button id="speedToggleBtn" class="top-right-btn">Speed Up</button>
         <div id="cheat-buttons-container" class="hidden">
+            <div class="debug-toggle-group">
+                <label><input type="checkbox" id="toggleEventLog"> Show Event Logs</label>
+                <label><input type="checkbox" id="toggleEquipmentDebug"> Show Equip Logs</label>
+            </div>
             <button id="cheatCoinBtn" class="cheat-btn">+1000 🪙</button>
             <button id="cheatGemBtn" class="cheat-btn">+500 💎</button>
             <button id="cheatXpBtn" class="cheat-btn">+5000 XP</button>
@@ -1502,7 +1528,7 @@
             <input type="number" id="maxBrickHpIncrement" value="500" min="0">
           </div>
           <hr>
-          <h4>Brick Overlays</h4>
+          <h4>Brick Overlays & Special Bricks</h4>
            <div class="form-group">
             <label for="builderBrickChance">Builder Chance:</label>
             <input type="number" id="builderBrickChance" min="0" max="1" step="0.01" value="0.03">
@@ -1510,16 +1536,6 @@
            <div class="form-group">
             <label for="healerBrickChance">Healer Chance:</label>
             <input type="number" id="healerBrickChance" min="0" max="1" step="0.01" value="0.03">
-          </div>
-          <hr>
-          <h4>Special Brick Settings</h4>
-          <div class="form-group">
-            <label for="equipmentBrickInitialChance">Equipment Brick Initial Chance:</label>
-            <input type="number" id="equipmentBrickInitialChance" min="0" max="1" step="0.01" value="0.1">
-          </div>
-          <div class="form-group">
-            <label for="equipmentBrickChancePerLevel">Equipment Brick Chance Per Level:</label>
-            <input type="number" id="equipmentBrickChancePerLevel" min="0" max="1" step="0.01" value="0.1">
           </div>
           <hr>
           <h4>Coin Settings</h4>
