feat: Add save/load and invasion mode UI elements
Introduces new buttons for saving/loading game state and specific UI elements for the invasion defend mode. This includes buttons for advancing waves, ending invasions, and visual feedback for touch inputs during invasion mode.

Also updates CSS to style new elements and adjust existing styles for better appearance. Sniper projectile hit radius has been slightly increased to improve gameplay.

Changes:
- Added `saveGameBtn` and `quickLoadBtn` to bottom-left controls.
- Added `invasionNextWaveBtn` and `invasionEndBtn` to the toolbar.
- Updated HTML structure for control button placement.
- Modified CSS for various UI elements, including buttons and animations.
- Adjusted projectile hit detection in `sketch.js` for invasion mode.
- Introduced touch effect in `render.js` for invasion mode.

--- a/index.html
+++ b/index.html
@@ -227,13 +227,17 @@
             <button id="editBaseBtn" class="bottom-left-btn hidden">Edit Base</button>
             <button id="homeBaseShopBtn" class="bottom-left-btn hidden">Shop</button>
             <button id="enchantBtn" class="bottom-left-btn hidden">Enchant</button>
+            <button id="saveGameBtn" class="bottom-left-btn hidden">Save/Load</button>
+            <button id="quickLoadBtn" class="bottom-left-btn hidden">Load Game</button>
+            <!-- startNextWaveBtn is removed from here, moved to toolbar logic -->
             <button id="startNextWaveBtn" class="bottom-left-btn hidden">Start Next Wave</button>
-            <button id="saveGameBtn" class="bottom-left-btn hidden">Save Game</button>
         </div>
         <div class="toolbar">
            <button id="levelSettingsButton">Level Settings</button>
            <button id="prevLevelBtn">Prev Level</button>
            <button id="nextLevelBtn">Next Level</button>
+           <button id="invasionNextWaveBtn" class="hidden">Next Wave</button>
+           <button id="invasionEndBtn" class="hidden">End Invasion</button>
            <button id="pauseResumeBtn">Pause</button>
            <button id="clear">Reset</button>
         </div>
